Locking nodes that are in the site map

--- a/app/views/noodall/admin/nodes/show.html.erb
+++ b/app/views/noodall/admin/nodes/show.html.erb
@@ -7,40 +7,34 @@
 <%= form_for(@node, :as => :node, :url => noodall_admin_node_path(@node), :html => {:method => :put, :id => "node-form"}) do |f| %>
   <%= f.error_messages %>
 
-<div id="main-form">
+  <div id="main-form">
 
-  <p>
-    <span class="tooltip" title="Enter a title for this page (used in page headings and titles)">&nbsp;</span>
-    <%= f.label :title, 'Title *' %><br/>
-    <span class="input-wrap"><%= f.text_field :title %></span>
-  </p>
-  <p>
-    <span class="tooltip" title="Enter a name for this page (used in links and navigation, defaults to title)">&nbsp;</span>
-    <%= f.label :name %><br/>
-    <span class="input-wrap"><%= f.text_field :name %></span>
-  </p>
+    <p>
+      <span class="tooltip" title="Enter a title for this page (used in page headings and titles)">&nbsp;</span>
+      <%= f.label :title, 'Title *' %><br/>
+      <span class="input-wrap"><%= f.text_field :title %></span>
+    </p>
+    <p>
+      <span class="tooltip" title="Enter a name for this page (used in links and navigation, defaults to title)">&nbsp;</span>
+      <%= f.label :name %><br/>
+      <span class="input-wrap"><%= f.text_field :name %></span>
+    </p>
 
-  <%= render :partial => "admin/nodes/#{@node.class.name.underscore}", :locals => { :f => f }  %>
+    <%= render :partial => "admin/nodes/#{@node.class.name.underscore}", :locals => { :f => f }  %>
 
-  <p>
-    <span class="tooltip" title="Enter a short summary of this content.">&nbsp;</span>
-    <%= f.label :description, "Short Description" %><br/>
-    <span class="input-wrap"><%= f.text_area :description, :class => 'description' %></span>
-  </p>
+    <p>
+      <span class="tooltip" title="Enter a short summary of this content.">&nbsp;</span>
+      <%= f.label :description, "Short Description" %><br/>
+      <span class="input-wrap"><%= f.text_area :description, :class => 'description' %></span>
+    </p>
 
-  <p>
-    <span class="tooltip" title="Enter a comma seperated list of keywords to describe this content.&quot;website,launch,event&quot;">&nbsp;</span>
-    <%= f.label :keywords, "Keywords" %><br/>
-    <span class="input-wrap"><%= f.text_field :keywords %></span>
-  </p>
+    <p>
+      <span class="tooltip" title="Enter a comma seperated list of keywords to describe this content.&quot;website,launch,event&quot;">&nbsp;</span>
+      <%= f.label :keywords, "Keywords" %><br/>
+      <span class="input-wrap"><%= f.text_field :keywords %></span>
+    </p>
 
-  <p>
-    <span class="tooltip" title="Enter a custom url or leave it as the default value shown.">&nbsp;</span>
-    <%= f.label :permalink, 'Page Url' %><br/>
-    <span class="input-wrap"><%= f.text_field :permalink %></span>
-  </p>
-
-</div>
+  </div>
 
   <div class="fixed-form">
     <div id="buttons">
@@ -49,74 +43,79 @@
       <%= link_to 'Cancel', @node.root? ? noodall_admin_nodes_path : noodall_admin_node_nodes_path(@node.parent), :class => 'cancel'  %>
     </div>
 
-<% if can_publish?(@node) %>
-    <!-- Advanced Publishing Options -->
-    <div class="show-advanced">
-      <fieldset>
-        <legend class="advanced">Advanced</legend>
-        <div id="advanced">
-          <p class="published">
-            <%= f.label :published_at, "Publish at" %><br/>
-            <span class="input-wrap"><%= f.datetime_select :published_at, :include_blank => true  %></span>
-          </p>
+    <% if can_publish?(@node) %>
+      <!-- Advanced Publishing Options -->
+      <div class="show-advanced">
+        <fieldset>
+          <legend class="advanced">Advanced</legend>
+          <div id="advanced">
+            <p class="published">
+              <%= f.label :published_at, "Publish at" %><br/>
+              <span class="input-wrap"><%= f.datetime_select :published_at, :include_blank => true  %></span>
+            </p>
 
-          <p class="published">
-            <%= f.label :published_to, "Publish until" %><br/>
-            <%
-              # Remove select for far future dates
+            <p class="published">
+              <%= f.label :published_to, "Publish until" %><br/>
+              <%
+                # Remove select for far future dates
               @node.published_to = nil unless @node.published_to.nil? or @node.published_to < 5.years.from_now
             %>
-            <span class="input-wrap"><%= f.datetime_select :published_to, :include_blank => true %></span>
-          </p>
-
+          <span class="input-wrap"><%= f.datetime_select :published_to, :include_blank => true %></span>
+        </p>
+        <% unless @node.in_site_map? %>
           <p>
             <span class="node-mover">Parent Content</span>
             <span class="input-wrap" id="parent-title">
-            <%= @node.root? ? "Root" : @node.parent.title %>
-            <a href="#" class="edit-item">Edit</a>
+              <%= @node.root? ? "Root" : @node.parent.title %>
+              <a href="#" class="edit-item">Edit</a>
             </span>
             <%= f.hidden_field :parent, :value => @node.parent_id %>
             <%= hidden_field_tag :parent_types, @node.class.parent_classes.join(','), :disabled => true %>
           </p>
+          <p>
+            <span class="tooltip" title="Enter a custom url or leave it as the default value shown.">&nbsp;</span>
+            <%= f.label :permalink, 'Page Url' %><br/>
+            <span class="input-wrap"><%= f.text_field :permalink %></span>
+          </p>
+        <% end %>
 
-
-<% if current_user.admin? -%>
+        <% if current_user.admin? -%>
           <fieldset>
             <span class="tooltip" title="User Permissions">&nbsp;</span>
             <legend>User Permission</legend>
             <span class="input-wrap">
               <table>
-              <thead>
-                <tr>
-                  <th width="85">Action</th>
-                  <th width="90%">Groups</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <th><%= f.label :updatable_groups_list, "Update" %></th>
-                  <td><%= f.text_field :updatable_groups_list, :class => "groups-completer" %></td>
-                </tr>
-                <tr>
-                  <th><%= f.label :publishable_groups_list, "Publish" %></th>
-                  <td><%= f.text_field :publishable_groups_list, :class => "groups-completer" %></td>
-                </tr>
-                <tr>
-                  <th><%= f.label :destroyable_groups_list, "Delete" %></th>
-                  <td><%= f.text_field :destroyable_groups_list, :class => "groups-completer" %></td>
-                </tr>
-                <tr>
-                  <th><%= f.label :viewable_groups_list, "View" %></th>
-                  <td><%= f.text_field :viewable_groups_list, :class => "groups-completer" %></td>
-                </tr>
-              </tbody>
-            </table>
+                <thead>
+                  <tr>
+                    <th width="85">Action</th>
+                    <th width="90%">Groups</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <th><%= f.label :updatable_groups_list, "Update" %></th>
+                    <td><%= f.text_field :updatable_groups_list, :class => "groups-completer" %></td>
+                  </tr>
+                  <tr>
+                    <th><%= f.label :publishable_groups_list, "Publish" %></th>
+                    <td><%= f.text_field :publishable_groups_list, :class => "groups-completer" %></td>
+                  </tr>
+                  <tr>
+                    <th><%= f.label :destroyable_groups_list, "Delete" %></th>
+                    <td><%= f.text_field :destroyable_groups_list, :class => "groups-completer" %></td>
+                  </tr>
+                  <tr>
+                    <th><%= f.label :viewable_groups_list, "View" %></th>
+                    <td><%= f.text_field :viewable_groups_list, :class => "groups-completer" %></td>
+                  </tr>
+                </tbody>
+              </table>
             </span>
           </fieldset>
-<% end -%>
-        </div>
-      </fieldset>
-    </div>
+        <% end -%>
+      </div>
+    </fieldset>
+  </div>
 <% end -%>
   </div>
 
