--- a/app/views/noodall/admin/assets/add.html.erb
+++ b/app/views/noodall/admin/assets/add.html.erb
@@ -1,10 +1,5 @@
 <% if @asset.image? %>
-<%= link_to image_tag( @asset.url('100x100#', @asset.web_image_extension), :alt => @asset.description, :id => "asset-#{@asset.id}" ), @asset.url('800x600', @asset.web_image_extension), :class => 'lightbox', :title => @asset.title %>
-<% elsif @asset.video? %>
-<div class="video">
-  <%= link_to image_tag( @asset.url('220x125#', @asset.web_image_extension), :alt => @asset.description, :id => "asset-#{@asset.id}" ), @asset.url, :class => 'lightboxVideo', :title => @asset.title %>
-  <strong><%= @asset.title %></strong>
-</div>
+  <%= render :partial => '/assets/image_choice' %>
 <% else -%>
-<%= link_to( @asset.title, @asset.url, :title => @asset.description, :id => "asset-#{@asset.id}" ) %>
+  <%= link_to( @asset.title, @asset.url, :title => @asset.description, :id => "asset-#{@asset.id}" ) %>
 <% end -%>
