--- a/app/views/assets/_image_choice.html.erb
+++ b/app/views/assets/_image_choice.html.erb
@@ -1,17 +1,14 @@
 <%= render 'menu' %>
+
 <h2>Choose Image Size</h2>
-
 <div id="image-choices">
-
   <div class="choice small" title="Small">
-    <%= link_to image_tag( @asset.url('110x110', @asset.web_image_extension), :alt => @asset.description, :id => "asset-#{@asset.id}" ), @asset.url('800x600', @asset.web_image_extension), :class => 'lightbox', :title => @asset.title %>
+      <%= image_tag @asset.url('110x110', @asset.web_image_extension), :title => @asset.description, :alt => @asset.description,  'data-url' => @asset.url('800x600', @asset.web_image_extension), :id => "asset-#{@asset.id}", :class => "fancy" %>  
   </div>
-
   <div class="choice medium" title="Medium">
-    <%= link_to image_tag( @asset.url('220x220', @asset.web_image_extension), :alt => @asset.description, :id => "asset-#{@asset.id}" ), @asset.url('800x600', @asset.web_image_extension), :class => 'lightbox', :title => @asset.title %>
+      <%= image_tag @asset.url('200x200', @asset.web_image_extension), :title => @asset.description, :alt => @asset.description, 'data-url' => @asset.url('800x600', @asset.web_image_extension), :id => "asset-#{@asset.id}", :class => "fancy" %>  
   </div>
-
   <div class="choice large" title="Large">
-    <%= link_to image_tag( @asset.url('460x', @asset.web_image_extension), :alt => @asset.description, :id => "asset-#{@asset.id}" ), @asset.url('800x600', @asset.web_image_extension), :class => 'lightbox', :title => @asset.title %>
+      <%= image_tag @asset.url('460x', @asset.web_image_extension), :title => @asset.description, :alt => @asset.description, 'data-url' => @asset.url('800x600', @asset.web_image_extension), :id => "asset-#{@asset.id}", :class => "fancy" %>  
   </div>
 </div>
