added link description text to promo component in test.

--- a/demo/views/admin/components/_promo.html.erb
+++ b/demo/views/admin/components/_promo.html.erb
@@ -22,7 +22,9 @@
   </p>
 
   <p>
+    
     <%= f.label :link %><br />
+    <p>Remember to add <em>http://</em> to the beginning of external links (not part of this website).</p>
     <span class="input-wrap">
       <%= f.text_field :link %><br/>
       <span class="link-node">Content</span> |
