some styling to tidy up the component lists

--- a/public/stylesheets/admin/ie.css
+++ b/public/stylesheets/admin/ie.css
@@ -149,6 +149,15 @@ th .tooltip {
   height:500px;
 }
 
+#sub-form ol#slot-list li {
+    display:list-item;  list-style-position:inside;
+    padding-left:2px;
+}
+
+#sub-form ol#slot-list li a{
+    padding-left:5px !important;
+    display:block;
+}
 
 /*FORM BUILDER*/
 
