fixed up tool tips so they go right not left.

--- a/public/stylesheets/admin/layout.css
+++ b/public/stylesheets/admin/layout.css
@@ -625,6 +625,10 @@ a.tooltip {
         padding:10px;
 }
 
+#content-table .tooltip-show {
+  left:10px !important;
+}
+
 .hidden{
   display:none;
 }
