--- a/app/views/noodall/admin/nodes/show.html.erb
+++ b/app/views/noodall/admin/nodes/show.html.erb
@@ -39,7 +39,7 @@
   <div class="fixed-form">
     <div id="buttons">
       <%= f.submit 'Publish', :class => 'publish', :name => 'node[publish]' if can_publish?(@node) %>
-      <%= f.submit 'Draft', :name => 'node[hide]', :class => 'draft' %>
+      <%= f.submit 'Draft', :name => "draft", :class => 'draft' %>
       <%= link_to 'Cancel', @node.root? ? noodall_admin_nodes_path : noodall_admin_node_nodes_path(@node.parent), :class => 'cancel'  %>
     </div>
 
@@ -49,7 +49,7 @@
         <fieldset>
           <legend class="advanced">Advanced</legend>
           <div id="advanced">
-           
+
              <div class="published-section">
                   <p class="published">
                      <%= f.label :published_at, "Publish at" %><br/>
@@ -103,9 +103,9 @@
                    </div>
                  <% end -%>
 
-             
-             
-             
+
+
+
              <div class="position-section">
                 <% unless @node.in_site_map? %>
                    <p>
