--- a/public/stylesheets/ie8.css
+++ b/public/stylesheets/ie8.css
@@ -1,8 +1,131 @@
-/* -------------- IE8 -------------- */
-/* for IE8 */
+/*
+Syntax error: Invalid CSS after "...------------ */": expected selector or at-rule, was "{"
+        on line 6 of /home/steve/Gems/noodall-ui/public/stylesheets/sass/ie8.scss
 
+1: /* -------------- IE8 -------------- */
+2: /* for IE8 */
+3: 
+4: 
+5: /* -------------- CLEARFIX -------------- */
+6: {
+7:   height: 1%;
+8: }
 
-/* -------------- CLEARFIX -------------- */
-{
-  height: 1%;
-}
+Backtrace:
+/home/steve/Gems/noodall-ui/public/stylesheets/sass/ie8.scss:6
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/haml-3.1.1/vendor/sass/lib/sass/../sass/scss/parser.rb:900:in `expected'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/haml-3.1.1/vendor/sass/lib/sass/../sass/scss/parser.rb:843:in `expected'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/haml-3.1.1/vendor/sass/lib/sass/../sass/scss/parser.rb:27:in `parse'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/haml-3.1.1/vendor/sass/lib/sass/../sass/engine.rb:319:in `_to_tree'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/haml-3.1.1/vendor/sass/lib/sass/../sass/engine.rb:291:in `_render'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/haml-3.1.1/vendor/sass/lib/sass/../sass/engine.rb:239:in `render'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/haml-3.1.1/vendor/sass/lib/sass/../sass/util.rb:298:in `silence_sass_warnings'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/haml-3.1.1/vendor/sass/lib/sass/../sass/engine.rb:239:in `render'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/haml-3.1.1/vendor/sass/lib/sass/../sass/plugin/compiler.rb:319:in `update_stylesheet'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/haml-3.1.1/vendor/sass/lib/sass/../sass/plugin/compiler.rb:181:in `update_stylesheets'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/haml-3.1.1/vendor/sass/lib/sass/../sass/plugin/compiler.rb:175:in `each'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/haml-3.1.1/vendor/sass/lib/sass/../sass/plugin/compiler.rb:175:in `update_stylesheets'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/haml-3.1.1/vendor/sass/lib/sass/../sass/plugin/compiler.rb:173:in `each'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/haml-3.1.1/vendor/sass/lib/sass/../sass/plugin/compiler.rb:173:in `update_stylesheets'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/haml-3.1.1/vendor/sass/lib/sass/../sass/plugin.rb:81:in `update_stylesheets'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/haml-3.1.1/vendor/sass/lib/sass/../sass/plugin.rb:54:in `check_for_updates'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/haml-3.1.1/vendor/sass/lib/sass/../sass/plugin/rack.rb:51:in `call'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/actionpack-3.0.7/lib/action_dispatch/middleware/best_standards_support.rb:17:in `call'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/actionpack-3.0.7/lib/action_dispatch/middleware/head.rb:14:in `call'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/rack-1.2.2/lib/rack/methodoverride.rb:24:in `call'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/actionpack-3.0.7/lib/action_dispatch/middleware/params_parser.rb:21:in `call'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/actionpack-3.0.7/lib/action_dispatch/middleware/flash.rb:182:in `call'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/actionpack-3.0.7/lib/action_dispatch/middleware/session/abstract_store.rb:149:in `call'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/actionpack-3.0.7/lib/action_dispatch/middleware/cookies.rb:302:in `call'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/actionpack-3.0.7/lib/action_dispatch/middleware/callbacks.rb:46:in `call'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/activesupport-3.0.7/lib/active_support/callbacks.rb:416:in `_run_call_callbacks'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/actionpack-3.0.7/lib/action_dispatch/middleware/callbacks.rb:44:in `call'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/rack-1.2.2/lib/rack/sendfile.rb:107:in `call'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/actionpack-3.0.7/lib/action_dispatch/middleware/remote_ip.rb:48:in `call'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/actionpack-3.0.7/lib/action_dispatch/middleware/show_exceptions.rb:47:in `call'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/railties-3.0.7/lib/rails/rack/logger.rb:13:in `call'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/rack-1.2.2/lib/rack/runtime.rb:17:in `call'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/activesupport-3.0.7/lib/active_support/cache/strategy/local_cache.rb:72:in `call'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/dragonfly-0.7.7/lib/dragonfly/middleware.rb:16:in `call'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/rack-1.2.2/lib/rack/lock.rb:11:in `call'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/rack-1.2.2/lib/rack/lock.rb:11:in `synchronize'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/rack-1.2.2/lib/rack/lock.rb:11:in `call'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/actionpack-3.0.7/lib/action_dispatch/middleware/static.rb:30:in `call'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/railties-3.0.7/lib/rails/application.rb:168:in `call'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/rack-1.2.2/lib/rack/urlmap.rb:47:in `call'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/rack-1.2.2/lib/rack/urlmap.rb:41:in `each'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/rack-1.2.2/lib/rack/urlmap.rb:41:in `call'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/rack-test-0.5.7/lib/rack/mock_session.rb:30:in `request'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/rack-test-0.5.7/lib/rack/test.rb:209:in `process_request'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/rack-test-0.5.7/lib/rack/test.rb:57:in `get'
+(__FORWARDABLE__):3:in `__send__'
+(__FORWARDABLE__):3:in `get'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/capybara-0.4.1.2/lib/capybara/driver/rack_test_driver.rb:259:in `get'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/capybara-0.4.1.2/lib/capybara/driver/rack_test_driver.rb:206:in `send'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/capybara-0.4.1.2/lib/capybara/driver/rack_test_driver.rb:206:in `process'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/capybara-0.4.1.2/lib/capybara/driver/rack_test_driver.rb:200:in `visit'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/capybara-0.4.1.2/lib/capybara/session.rb:135:in `visit'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/capybara-0.4.1.2/lib/capybara/dsl.rb:104:in `visit'
+/home/steve/Gems/noodall-ui/features/step_definitions/component_steps.rb:3
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/core_ext/instance_exec.rb:48:in `instance_exec'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/core_ext/instance_exec.rb:48:in `cucumber_instance_exec'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/core_ext/instance_exec.rb:69:in `cucumber_run_with_backtrace_filtering'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/core_ext/instance_exec.rb:36:in `cucumber_instance_exec'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/rb_support/rb_step_definition.rb:62:in `invoke'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/step_match.rb:26:in `invoke'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/step_invocation.rb:63:in `invoke'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/step_invocation.rb:42:in `accept'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/tree_walker.rb:99:in `visit_step'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/tree_walker.rb:164:in `broadcast'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/tree_walker.rb:98:in `visit_step'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/step_collection.rb:15:in `accept'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/step_collection.rb:14:in `each'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/step_collection.rb:14:in `accept'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/tree_walker.rb:93:in `visit_steps'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/tree_walker.rb:164:in `broadcast'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/tree_walker.rb:92:in `visit_steps'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/scenario.rb:53:in `accept'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/runtime.rb:79:in `with_hooks'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/runtime.rb:95:in `before_and_after'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/runtime.rb:78:in `with_hooks'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/runtime/support_code.rb:115:in `call'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/runtime/support_code.rb:115:in `around'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/language_support/language_methods.rb:13:in `around'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/language_support/language_methods.rb:95:in `call'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/language_support/language_methods.rb:95:in `execute_around'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/language_support/language_methods.rb:12:in `around'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/runtime/support_code.rb:114:in `around'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/runtime/support_code.rb:112:in `call'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/runtime/support_code.rb:112:in `around'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/runtime.rb:90:in `around'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/runtime.rb:77:in `with_hooks'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/scenario.rb:51:in `accept'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/scenario.rb:106:in `with_visitor'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/scenario.rb:45:in `accept'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/tree_walker.rb:51:in `visit_feature_element'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/tree_walker.rb:164:in `broadcast'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/tree_walker.rb:50:in `visit_feature_element'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/feature.rb:40:in `accept'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/feature.rb:39:in `each'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/feature.rb:39:in `accept'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/tree_walker.rb:20:in `visit_feature'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/tree_walker.rb:164:in `broadcast'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/tree_walker.rb:19:in `visit_feature'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/features.rb:29:in `accept'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/features.rb:17:in `each'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/features.rb:17:in `each'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/features.rb:28:in `accept'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/tree_walker.rb:14:in `visit_features'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/tree_walker.rb:164:in `broadcast'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/tree_walker.rb:13:in `visit_features'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/runtime.rb:45:in `run!'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/cli/main.rb:43:in `execute!'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/cli/main.rb:20:in `execute'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/cucumber:14
+/home/steve/.rvm/gems/ruby-1.8.7-p330/bin/cucumber:19:in `load'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/bin/cucumber:19
+*/
+body:before {
+  white-space: pre;
+  font-family: monospace;
+  content: "Syntax error: Invalid CSS after \"...------------ */\": expected selector or at-rule, was \"{\"\A         on line 6 of /home/steve/Gems/noodall-ui/public/stylesheets/sass/ie8.scss\A \A 1: /* -------------- IE8 -------------- */\A 2: /* for IE8 */\A 3: \A 4: \A 5: /* -------------- CLEARFIX -------------- */\A 6: {\A 7:   height: 1%;\A 8: }"; }
