add style for alert flash

--- a/public/stylesheets/admin/forms.css
+++ b/public/stylesheets/admin/forms.css
@@ -392,6 +392,14 @@ div#flash div.error {
           color:#fff;
 }
 
+div#flash div.alert {
+          background: #E19449;
+          border:3px solid #C46F1C;
+          color:#fff;
+}
+
+
+
 div#flash a {
   color:#fff;
 }
